--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,21 @@
-<section class=bg-home id=home>
-	<div class=bg-overlay></div>
-	<div id=particles-js></div>
-	<div class=home-center>
-		<div class=home-desc-center>
-			<div class=container>
+<section class="bg-home" id="home">
+	<div class="bg-overlay"></div>
+	<div id="particles-js"></div>
+	<div class="home-center">
+		<div class="home-desc-center">
+			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-10 mt-5">
 						<div class="home-title text-center">
 							<h5 class="wow fadeInDownBig text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5>
-							<h1 class=display-3> <span class="element text-white disable-select" data-elements="Jayant Goel, Data Science Enthusiast, Machine Learning Enthusiast, MEAN Stack Developer, Android Developer, Open Source Contributor"></span></h1>
+							<h1 class="display-3">
+								<span class="element text-white disable-select"></span>
+							</h1>
 							<p class="wow fadeInUpBig text-light mx-auto para-desc disable-select">
-								I am Final-year student pursuing Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62</p>
-							<div class="mt-4 pt-2"> <a rel=noreferrer aria-label=home target=_blank href="https://drive.google.com/file/d/1h-Pi3xzWfcPmxU8tp0aXGHyt9PriynrP/view?usp=sharing" class="btn btn-outline btn-round" data-toggle=tooltip data-placement=bottom data-html=true
-							                           title=" <strong> <em>Resume</em> </strong>"> Download Resume <i class="fas fa-download ml-2"></i> </a></div>
+								{{homeData['introduction']}}
+							</p>
+							<div class="mt-4 pt-2">
+								<a rel="noreferrer" aria-label=home target=_blank href="{{homeData['resumeLink']}}" class="btn btn-outline btn-round" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Resume</em> </strong>"> Download Resume <i class="fas fa-download ml-2"></i> </a></div>
 						</div>
 					</div>
 				</div>
