--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,8 +3,8 @@
 	<div class=container>
 		<div class="row justify-content-center">
 			<div class="col-md-7 text-center fadeInUp">
-				<h2 class="wow slideInLeft disable-select" data-wow-duration=0.25s data-wow-delay=0.1s>“Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.”</h2> <br> <br>
-				<h2 class="wow slideInRight font-italic disable-select" data-wow-duration=0.25s data-wow-delay=0.1s>-Stewart Brand</h2>
+				<h2 class="wow slideInLeft disable-select" data-wow-duration=0.25s data-wow-delay=0.1s>{{quoteData['quote']}}</h2> <br> <br>
+				<h2 class="wow slideInRight font-italic disable-select" data-wow-duration=0.25s data-wow-delay=0.1s>- {{quoteData['author']}}</h2>
 			</div>
 		</div>
 	</div>
