--- a/src/app/achievement/achievement.component.html
+++ b/src/app/achievement/achievement.component.html
@@ -1,4 +1,4 @@
-<section class="section pointer bg-light" id=achievements>
+<section class="section pointer bg-light" id="achievement">
 	<div class="container z-index">
 		<div class="row justify-content-center txt-bg txt-bg-achievement">
 			<div class=col-lg-6>
