--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,4 +1,4 @@
-<section class="js-section-codespaces-develop section pointer section-codespaces-develop position-relative overflow-hidden" id=trainings>
+<section class="js-section-codespaces-develop section pointer section-codespaces-develop position-relative overflow-hidden" id="training">
 	<div class="codespaces-develop-bg position-absolute top-0 left-0 width-full height-full"></div>
 	<img src="assets/images/footer-cloud.svg" class="codespaces-develop-cloud position-absolute bottom-0" alt=BgImage
 	     loading="lazy"/>
