--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,8 @@
 				<div class="text-center mt-5 mb-5"> <br>
 					<ul class="social-icons mb-3 list-inline">
 						<li class="list-inline-item">
-							<a rel="noreferrer" aria-label=image href="https://github.com/JayantGoel001/" target=_blank data-toggle=tooltip data-placement=left data-html=true title=" <strong> <em>GitHub</em> </strong>"> <i class="fab fa-github dark"></i>
+							<a rel="noreferrer" aria-label=image href="https://github.com/JayantGoel001/" target=_blank data-toggle=tooltip data-placement=left data-html=true title=" <strong> <em>GitHub</em> </strong>">
+								<i class="fab fa-github dark"></i>
 							</a>
 						</li>
 						<li class="list-inline-item">
@@ -16,7 +17,11 @@
 								<img src="assets/images/gist.webp" width=20 height=20 alt=gist loading="lazy"/>
 							</a>
 						</li>
-						<li class="list-inline-item"> <a rel="noreferrer" aria-label=image href="https://www.linkedin.com/in/JayantGoel001/" target=_blank data-toggle=tooltip data-placement=right data-html=true title=" <strong> <em>LinkedIn</em> </strong>"> <i class="fab fa-linkedin-in dark h6"></i> </a></li>
+						<li class="list-inline-item">
+							<a rel="noreferrer" aria-label=image href="https://www.linkedin.com/in/JayantGoel001/" target=_blank data-toggle=tooltip data-placement=right data-html=true title=" <strong> <em>LinkedIn</em> </strong>">
+								<i class="fab fa-linkedin-in dark h6"></i>
+							</a>
+						</li>
 					</ul>
 					<ul class="social-icons mb-3 list-inline">
 						<li class="list-inline-item"> <a rel="noreferrer" aria-label=image href="https://www.instagram.com/jayantgoel001/" target=_blank data-toggle=tooltip data-placement=left data-html=true title=" <strong> <em>Instagram</em> </strong>"> <i class="fab fa-instagram dark h6"></i> </a></li>
