--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,7 +13,7 @@
 		<div class="col-lg-12 mt-4 pt-2">
 			<div>
 				<ul class="nav nav-tabs nav-fill" id=myTab>
-					<li *ngFor="let tab of aboutData['NavTabs']" class=nav-item data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{tab['name'].toUpperCase() }}</em> </strong>">
+					<li *ngFor="let tab of aboutData['NavTabs']" class=nav-item data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{tab['name'] }}</em> </strong>">
 						<a rel=noreferrer class="nav-link {{tab['active']}}" id="{{tab['active']}}-tab" data-toggle=tab href="#{{tab['id']}}"> {{tab["name"] }} </a>
 					</li>
 				</ul>
