--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,30 +1,15 @@
 <section class="js-section-codespaces-develop section pointer section-codespaces-develop position-relative overflow-hidden" id="training">
 	<div class="codespaces-develop-bg position-absolute top-0 left-0 width-full height-full"></div>
-	<img src="assets/images/footer-cloud.svg" class="codespaces-develop-cloud position-absolute bottom-0" alt=BgImage
-	     loading="lazy"/>
+	<img src="{{trainingData['background']}}" class="codespaces-develop-cloud position-absolute bottom-0" alt=BgImage loading="lazy"/>
 	<div class="container z-index">
-		<div style=width:175px class="position-relative mb-6 mx-auto mx-md-0">
+		<div style="width:175px" class="position-relative mb-6 mx-auto mx-md-0">
 			<div class="codespaces-sun position-relative circle">
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
-				<div class="codespaces-sun-circle z-2 circle position-absolute top-0 left-0 height-full width-full"></div>
-				<div class="codespaces-sun-circle-night z-2 circle position-absolute top-0 left-0 height-full width-full"></div>
+				<div *ngFor="let sun of trainingData['sun']" class="{{sun}} circle top-0 left-0 position-absolute"></div>
 			</div>
-			<div class="codespaces-develop-time codespaces-develop-time-1 circle overflow-hidden position-absolute" style=left:66px;top:-10px></div>
-			<div class="codespaces-develop-time codespaces-develop-time-2 circle overflow-hidden position-absolute" style=left:88px;top:-20px></div>
-			<div class="codespaces-develop-time codespaces-develop-time-3 circle overflow-hidden position-absolute" style=left:110px;top:-10px></div>
+			<div *ngFor="let developTime of trainingData['developTime']" class="codespaces-develop-time codespaces-develop-time-{{developTime['time']}} circle overflow-hidden position-absolute" style="{{developTime['style']}}"></div>
 			<div class="codespaces-moon position-absolute top-0">
-				<div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
-				<div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
-				<div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
-				<img src="assets/images/moon-dark.svg" alt=Moon-dark class="codespaces-moon-svg-dark position-absolute z-2" loading="lazy"/>
-				<img src="assets/images/moon.svg" alt=Moon class="codespaces-moon-svg position-absolute z-2" loading="lazy"/>
+				<div *ngFor="let dot of trainingData['moon']['dot']" class="{{dot}}"></div>
+				<img *ngFor="let moon of trainingData['moon']['moon']" src="{{moon['image']}}" alt="{{moon['name']}}" class="{{moon['class']}} position-absolute z-2" loading="lazy"/>
 			</div>
 		</div>
 		<div class="row justify-content-center txt-bg txt-bg-training">
@@ -48,8 +33,7 @@
 					</div>
 					<div class="services-back-flip text-center bg-custom text-white p-4">
 						<div class=services-desc>
-							<div class=mb-1>Theatron is an entertainment Android Application which I created using Kotlin with Firebase as Backend and Deployed It On Play Store.</div> <br> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
-							                                                                                                                                                                    target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
+							<div class=mb-1>Theatron is an entertainment Android Application which I created using Kotlin with Firebase as Backend and Deployed It On Play Store.</div> <br> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing" target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
 					</div>
 				</div>
 			</div>
