--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -21,103 +21,23 @@
 				</div>
 			</div>
 		</div>
-		<div class=row>
-			<div class="col-lg-4 wow bounceInLeft">
+		<div *ngFor="let trainingList of trainingData['training']" class=row>
+			<div *ngFor="let training of trainingList" class="col-lg-4 wow {{training['class']}}">
 				<div class="services-flip-box mt-4 pt-2">
 					<div class="services-front-flip bg-white text-center p-5">
 						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">Theatron</div>
-							<p class="text-muted mb-0">Internship - Android Development</p>
-							<p class="text-muted mb-0">10 Feb, 2020 - 30 Sept, 2020</p>
+							<div class="h5 font-weight-bold mb-3">{{training['title']}}</div>
+							<p class="text-muted mb-0">{{training['subtitle']}}</p>
+							<p class="text-muted mb-0">{{training['date']}}</p>
 						</div>
 					</div>
 					<div class="services-back-flip text-center bg-custom text-white p-4">
 						<div class=services-desc>
-							<div class=mb-1>Theatron is an entertainment Android Application which I created using Kotlin with Firebase as Backend and Deployed It On Play Store.</div> <br> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing" target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 wow bounceInDown">
-				<div class="services-flip-box mt-4 pt-1">
-					<div class="services-front-flip bg-white text-center p-5">
-						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">Android Development</div>
-							<p class="text-muted mb-0">Classroom Training - Coding Blocks</p>
-							<p class="text-muted mb-0">21 Aug, 2019 - 17 Dec, 2019</p>
+							<div class=mb-1>{{training['description']}}</div>
+							<br>
+							<a rel="noreferrer" aria-label="image" href="{{training['link']}}" target=_blank class="btn btn-round p-2 certificate-button" data-toggle="tooltip" data-placement="bottom" data-html="true" title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a>
 						</div>
 					</div>
-					<div class="services-back-flip text-center bg-custom text-white p-4">
-						<div class="services-desc">
-							<div class="services-icon">
-								<div class="mb-1">The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.</div> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1lSc9it--0LooJpp6A7riggSFZPVq2vn6/view?usp=sharing"
-								                                                                                                                                                                                                target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 wow bounceInRight">
-				<div class="services-flip-box mt-4 pt-2">
-					<div class="services-front-flip bg-white text-center p-5">
-						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">Data Science</div>
-							<p class="text-muted mb-0">Classroom/Live Training - Coding Blocks</p>
-							<p class="text-muted mb-0">29 Dec, 2019 - 05 May, 2020</p>
-						</div>
-					</div>
-					<div class="services-back-flip text-center bg-custom text-white p-4">
-						<div class=services-desc>
-							<div class=mb-1>This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of visualisation, analysis etc.</div> <br> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
-							                                                                                                                                                                                               target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class=row>
-			<div class="col-lg-4 wow bounceInLeft">
-				<div class="services-flip-box mt-4 pt-2">
-					<div class="services-front-flip bg-white text-center p-5">
-						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">Complete Web Developer Master Course</div>
-							<p class="text-muted mb-0">Online Training - Udemy</p>
-							<p class="text-muted mb-0">1 July 2020 - 25 Aug 2020</p>
-						</div>
-					</div>
-					<div class="services-back-flip text-center bg-custom text-white p-4">
-						<div class=services-desc>
-							<div class=mb-1>Complete Web Development course which focused on both Front and Back-end Development, starting with HTML, CSS, JavaScript to MEAN Stack Development</div> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
-							                                                                                                                                                                             target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 wow bounceInUp">
-				<div class="services-flip-box mt-4 pt-2">
-					<div class="services-front-flip bg-white text-center p-5">
-						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">Python Bootcamp</div>
-							<p class="text-muted mb-0">Online Training - Udemy</p>
-							<p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
-						</div>
-					</div>
-					<div class="services-back-flip text-center bg-custom text-white p-4">
-						<div class=services-desc>
-							<div class=services-icon>
-								<div class=mb-1>Python bootcamp served as a window for me for the Advanced Python Developer, as it helped me to start applying my knowledge in more Advance and GUI Part.</div> <br> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
-								                                                                                                                                                                                        target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 wow bounceInRight">
-				<div class="services-flip-box mt-4 pt-2">
-					<div class="services-front-flip bg-white text-center p-5">
-						<div class=services-desc>
-							<div class="h5 font-weight-bold mb-3">DSA With Java</div>
-							<p class="text-muted mb-0">Bootcamp - Code For Cause</p>
-							<p class="text-muted mb-0">29 Aug, 2020 - 19 Sept, 2020</p>
-						</div>
-					</div>
-					<div class="services-back-flip text-center bg-custom text-white p-4">
-						<div class=mb-1>The Course on Data Structure and Algorithm which included implementation of every Data Structure in Java and Scored 1st Rank in HackerEarth Coding Bootcamp.</div> <a rel=noreferrer aria-label=image href="https://drive.google.com/file/d/1FWIJ_NTA7Z31eIX7qBIlUnnottfjGsWf/view?usp=sharing" target=_blank class="btn btn-round p-2 certificate-button" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a></div>
 				</div>
 			</div>
 		</div>
