--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,8 @@
 			<div class="col-lg-6 pointer">
 				<div class="wow fadeIn section-title text-center mb-4 pb-2">
 					<div class="mb-5 pb-3">
-						<i class="fas fa-user-graduate h1 text-muted"></i></div>
+						<i class="fas fa-user-graduate h1 text-muted"></i>
+					</div>
 					<div class="h3 font-weight-bold">About me</div>
 					<p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
 				</div>
@@ -47,7 +48,8 @@
 					<div class="tab-pane fade" id=resume role=tabpanel aria-labelledby=resume-tab>
 						<div class=row>
 							<div class=col-lg-12>
-								<div id=education class=education-section> <i class="fas fa-graduation-cap mt-5 font-size-50"></i>
+								<div id=education class=education-section>
+									<i class="fas fa-graduation-cap mt-5 font-size-50"></i>
 									<div class="timeline mt-5">
 										<div *ngFor="let ed of aboutData['education']" class="wow timeline-box {{ed['animationClass']}}" data-wow-delay=0s>
 											<div class=timeline-container>
