--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,8 @@
 								{{homeData['introduction']}}
 							</p>
 							<div class="mt-4 pt-2">
-								<a rel="noreferrer" aria-label=home target=_blank href="{{homeData['resumeLink']}}" class="btn btn-outline btn-round" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Resume</em> </strong>"> Download Resume <i class="fas fa-download ml-2"></i> </a></div>
+								<a rel="noreferrer" aria-label=home target=_blank href="{{homeData['resumeLink']}}" class="btn btn-outline btn-round" data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>Resume</em> </strong>"> Download Resume <i class="fas fa-download ml-2"></i> </a>
+							</div>
 						</div>
 					</div>
 				</div>
