--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,4 +1,3 @@
-<app-loader></app-loader>
 <app-navbar></app-navbar>
 <app-home></app-home>
 <app-about></app-about>
@@ -8,3 +7,4 @@
 <app-achievement></app-achievement>
 <app-contact></app-contact>
 <app-footer></app-footer>
+<app-splash></app-splash>
