--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
 			</div>
 		</div>
 		<div class="row justify-content-center">
-			<div *ngFor="let contact of contactData" class="col-lg-3 col-md-4 mt-4 pt-2 wow {{contact['animationClass']}}" data-wow-delay=0.1s data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{contact['title'].toUpperCase()}}</em> </strong>">
+			<div *ngFor="let contact of contactData" class="col-lg-3 col-md-4 mt-4 pt-2 wow {{contact['animationClass']}}" data-wow-delay=0.1s data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{contact['title']}}</em> </strong>">
 				<div class="contact-desc text-center">
 					<div class="contact-icon mb-3"> <i class="{{contact['icon']}} text-custom h3"></i></div>
 					<div class="contact-details">
