--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="services-back-flip text-center bg-custom text-white p-4">
 						<div class=services-desc>
-							<div class=mb-1>{{training['description']}}</div>
+							<div class="mb-1">{{training['description']}}</div>
 							<br>
 							<a rel="noreferrer" aria-label="image" href="{{training['link']}}" target=_blank class="btn btn-round p-2 certificate-button" data-toggle="tooltip" data-placement="bottom" data-html="true" title=" <strong> <em>Certificate Link</em> </strong>"> Certificate Link </a>
 						</div>
