--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -78,3 +78,19 @@
 	background: #03a9f4;
 	box-shadow: 0 0 20px #03a9f4, 0 0 40px #03a9f4, 0 0 60px #03a9f4, 0 0 80px #03a9f4, 0 0 100px #03a9f4, 0 0 0 5px rgba(3, 169, 244, .1)
 }
+@keyframes animate{
+	0%{
+		transform:rotate(0)
+	}
+	100%{
+		transform:rotate(360deg)
+	}
+}
+@-webkit-keyframes animate{
+	0%{
+		transform:rotate(0)
+	}
+	100%{
+		transform:rotate(360deg)
+	}
+}
