--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
 			<div>
 				<ul class="nav nav-tabs nav-fill" id=myTab>
 					<li *ngFor="let tab of aboutData['NavTabs']" class=nav-item data-toggle=tooltip data-placement=bottom data-html=true title=" <strong> <em>{{tab['name'] }}</em> </strong>">
-						<a rel=noreferrer class="nav-link {{tab['active']}}" id="{{tab['active']}}-tab" data-toggle=tab href="#{{tab['id']}}"> {{tab["name"] }} </a>
+						<a rel=noreferrer class="nav-link {{tab['active']}}" id="{{tab['id']}}-tab" data-toggle=tab href="#{{tab['id']}}"> {{tab["name"] }} </a>
 					</li>
 				</ul>
 				<div class=tab-content id=myTabContent>
